--- a/plist/fortnite.plist
+++ b/plist/fortnite.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://archive.org/download/clash-of-clans-vak-ipa-15.352.8/Clash%20Of%20Clans%20-%20VAK%20IPA%20%5B15.352.8%5D.ipa</string>
+					<string>https://archive.org/download/video-star-pro-omko-store_202308/Video%20Star%20Pro%20OMKO%20STORE.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -33,15 +33,15 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>nt.nc.ios</string>
+				<string>com.frontierdesign.videostarpro111</string>
 				<key>bundle-version</key>
 				<string>438</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>subtitle</key>
-				<string>clash of clans</string>
+				<string>fortnite</string>
 				<key>title</key>
-				<string>📥clash of clans📥
+				<string>📥fortnite📥
 
 ‎تایەبەتە بە چەناڵی
 
