--- a/plist/snapchat.plist
+++ b/plist/snapchat.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://archive.org/download/clash-of-clans-vak-ipa-15.352.8/Clash%20Of%20Clans%20-%20VAK%20IPA%20%5B15.352.8%5D.ipa</string>
+					<string>https://archive.org/download/428-snapchat-12.37.0-1691521748/428%20Snapchat%20_12.37.0_1691521748.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -33,15 +33,15 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>nt.nc.ios</string>
+				<string>com.toyopagroup.picaboo1</string>
 				<key>bundle-version</key>
 				<string>438</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>subtitle</key>
-				<string>clash of clans</string>
+				<string>snapchat</string>
 				<key>title</key>
-				<string>📥clash of clans📥
+				<string>📥snapchat📥
 
 ‎تایەبەتە بە چەناڵی
 
